# mags-release

./: CMakeLists.txt  README.md
run/: run_mags.cpp  run_mags_dm.cpp  run_para_mags.cpp  run_para_mags_dm.cpp
src/: global.h  graph.cpp  graph.h  gsum.cpp  gsum.h  pgsum.cpp  pgsum.h  util.cpp  util.h
